<resources>
    <string name="app_name">wordify</string>
    <string name="icon">icon</string>
    <string name="dictionary_made_easy">dictionary made easy</string>
    <string name="add_a_new_word">add a new word</string>
    <string name="words">words</string>
    <string name="favorites">favorites</string>
    <string name="archives">archives</string>
    <string name="about">about</string>
    <string name="_2021_wordify">© 2021 wordify</string>
    <string name="about_text">wordify — a place where you can create, read, delete or update new words from several languages and save translations in english.</string>
    <string name="about_disclamer_text">this app was created by 00009987 to fulfill mobile applications development module’s requirements, and does not represent an actual company or service.</string>
    <string name="original">original</string>
    <string name="type_your_word">type your word</string>
    <string name="translation">translation</string>
    <string name="type_its_translation">type its translation</string>
    <string name="definition">definition</string>
    <string name="type_its_definition">type its definition</string>
    <string name="spanish">spanish</string>
    <string name="language">language</string>
    <string name="favorite">favorite</string>
    <string name="create">create</string>
    <string name="word_translation">word - translation</string>
    <string name="edit_the_word">edit the word</string>
    <string name="filter_by_language">filter by language</string>
    <string name="filter">filter</string>
    <string name="type_your_search">type your search...</string>
    <string name="search">search</string>
    <string name="username">username</string>
    <string name="bio">bio</string>
    <string name="info">info</string>
    <string name="about_the_developer_from_a_github_api">about the developer (from a github api)</string>
</resources>