<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whiteBackground"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/original"
                android:textColor="@color/primaryColor"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/originalWord"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:autofillHints="text"
                android:background="@drawable/card_container"
                android:elevation="2dp"
                android:fontFamily="@font/poppins_regular"
                android:hint="@string/type_your_word"
                android:inputType="text"
                android:padding="16dp"
                android:textColor="@color/primaryColor"
                android:textColorHint="@color/darkGrey" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/translation"
                android:textColor="@color/primaryColor"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/translation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:autofillHints="text"
                android:background="@drawable/card_container"
                android:elevation="2dp"
                android:fontFamily="@font/poppins_regular"
                android:hint="@string/type_its_translation"
                android:inputType="text"
                android:padding="16dp"
                android:textColor="@color/primaryColor"
                android:textColorHint="@color/darkGrey" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/definition"
                android:textColor="@color/primaryColor"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/definition"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:autofillHints="text"
                android:background="@drawable/card_container"
                android:elevation="2dp"
                android:fontFamily="@font/poppins_regular"
                android:gravity="top"
                android:hint="@string/type_its_definition"
                android:inputType="text|textMultiLine"
                android:padding="16dp"
                android:textColor="@color/primaryColor"
                android:textColorHint="@color/darkGrey" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/language"
                android:textColor="@color/primaryColor"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/language_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@drawable/spinner_style"
                android:elevation="2dp"
                android:spinnerMode="dropdown"
               />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/favorite"
                    android:textColor="@color/primaryColor"
                    android:textSize="16sp" />

                <CheckBox
                    android:id="@+id/isFavorite"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/primaryColor" />
            </LinearLayout>

            <Button
                android:id="@+id/submitBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="24dp"
                android:background="@drawable/form_btn_container"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/create"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>


